--- a/frontend/react-chat-app/src/Chat.css
+++ b/frontend/react-chat-app/src/Chat.css
@@ -93,7 +93,7 @@ button .conversation-container .conversation-button {
   margin: 0;
   flex-direction: column;
   overflow-y: auto;
-   list-style-type: none;
+  list-style-type: none;
   
 }
 
@@ -124,14 +124,48 @@ button .conversation-container .conversation-button {
   
 } */
 
-.chat-history {
-   flex: 2;
+.chat-history1 {
+   /* flex: 2;
   display: flex;
   flex-direction: column;
   padding: 10px; 
   background-color: #e5ddd5;
    overflow: hidden; 
+     display: flex; */
+  flex: 2;
+  flex-direction: column;
+background-color: #e5ddd5;
+  flex-direction: column;
+  overflow-y: auto;
+ padding: 10px;
+   list-style-type: none;
+   display: flex;
+ 
 }
+.chat-history2 {
+   /* flex: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 10px; 
+  background-color: #e5ddd5;
+   overflow: hidden; 
+     display: flex; */
+  
+background-color: #e5ddd5;
+  flex-direction: column;
+  overflow-y: auto;
+ padding: 10px;
+   list-style-type: none;
+ 
+}
+/* .messagesContainer{
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 10px; 
+  background-color: #e5ddd5;
+   overflow: hidden;
+   } */
 
 .video-call-container {
   display: flex;
@@ -206,8 +240,8 @@ button .conversation-container .conversation-button {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: #333;
   font-weight: bold;
-    width:  auto;
-
+  width: auto;
+  max-width: 75%;
 }
 
 .receiver .message-content {
@@ -220,7 +254,7 @@ button .conversation-container .conversation-button {
   color: #333;
   font-weight: bold;
    width: auto;
-  max-width: 70%;
+  max-width: 75%;
 }
 
 .sender .message-timestamp {
@@ -268,6 +302,12 @@ button .conversation-container .conversation-button {
   display: flex;
   justify-content: space-between;
 }
+.input-messages {
+  width: 93%;
+  /* padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px; */
+}
 .conversation-button{
   background-color: #6dc8ec94;
    width: 100%;
@@ -285,7 +325,7 @@ button .conversation-container .conversation-button {
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
 }
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .conversation-button {
     width: 20%; /* Adjust the width for small screens */
   }
